--- a/src/HomeComponent.module.css
+++ b/src/HomeComponent.module.css
@@ -14,12 +14,12 @@
 }
 .button{
     background-color: rgb(0, 255, 42);
-    width: 200px;
+    width: 180px;
     font-size: 15px;
     padding: 5px;
     color: white;
     border-radius: 10px;
-    margin:30px auto 150px auto;
+    margin:50px 0 0 43vw ;
 }
 .div{
     display: flex;
