--- a/src/Result.module.css
+++ b/src/Result.module.css
@@ -30,9 +30,11 @@
     color: blue;
     margin: 10px 30px 0 500px;
     font-size: 20px;
+    padding: 1vh;
     
 }
 .btn2{
     color: green;
     font-size: 20px;
+    padding: 1vh;
 }
