--- a/src/quiz.module.css
+++ b/src/quiz.module.css
@@ -51,18 +51,28 @@
     background-color: rgb(108, 137, 235);
     padding: 5px;
     width: 80px;
-    margin-left: 370px;
+    margin-left: 320px;
     margin-top: 50px;
+    cursor:pointer;
 }
 .btn2{
     background-color: rgb(57, 182, 57);
     padding: 5px;
     width: 80px;
     margin-left: 10px;
+    cursor:pointer;
 }
 .btn3{
     padding: 5px;
     width: 80px;
     background-color: red;
     margin-left: 10px;
+    cursor:pointer;
 }
+.btn4{
+    padding: 5px;
+    width: 80px;
+    margin-left: 10px;
+    cursor:pointer;
+}
+
